# an-ants-life

./: README.MD  anthill.py  main.py  pyproject.toml
anthills/: fourmiliere_quatre.txt  fourmiliere_trois.txt
domain/: anthill.py  room.py
src/: solve.py
src/domain/: ant.py  anthill.py  room.py  simulation.py
src/utils/: parser.py
test/: anthill_test.py
test/utils/: scrapping_test.py
utils/: parser.py  scrapping.py
