[tool.poetry]
name = "an-ants-life"
version = "0.1.0"
description = ""
authors = ["bthreeIA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
