[tool.poetry]
name = "an-ants-life"
version = "0.1.0"
description = ""
authors = ["bthreeIA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
icecream = "*"
mypy = "^1.11.2"
black = "^24.8.0"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true


[tool.poetry.group.ci.dependencies]
black = { version = "*", allow-prereleases = true }
isort = "*"
ruff = "*"
mypy = "*"

[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["anthills"]
lint.select = ["E", "F", "W", "C90", "I", "UP", "PD", "PL"]
lint.ignore = ["D104", "D107", "D205", "D415", "D"]
lint.pydocstyle.convention = "google"
lint.pylint.max-args = 8
lint.mccabe.max-complexity = 5

[tool.mypy]
files = ["src"]
strict = true
namespace_packages = true
explicit_package_bases = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "icecream.*",
]
ignore_missing_imports = true